data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_471.wast
;; 2. **Test Description**: Design a `loop` with a `br_table` instruction that erroneously references an out-of-bounds label index. This invalid reference can prevent proper loop termination.    **Constraint**: Ensuring validation of label indices within `br_table` to prevent incorrect looping behavior.    **Infinite Loop Relevance**: Tests the handling of indirect branching to avoid unintended infinite loops.

(assert_invalid
  (module
    (func $test-loop-br_table
      (block $exit
        (loop $loop
          (i32.const 0)
          (br_table $exit $loop (i32.const 99)) 
        )
      )
    )
  )
  "out-of-bounds br_table label index"
)